--- a/docs/javaClientUserGuide/document.tex
+++ b/docs/javaClientUserGuide/document.tex
@@ -6,6 +6,15 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{multirow}
+\usepackage[pdftex,
+  pdfauthor={AICML},
+  pdftitle={BioBank2 Java Client User Manual},
+  colorlinks,
+  linkcolor=blue,
+  bookmarks=true,
+  bookmarksopen=true,
+  pdfstartview=FitH]
+	   {hyperref}
 
 \oddsidemargin  0.0in
 \evensidemargin 0.0in
@@ -22,7 +31,8 @@
 \frontmatter
 
 \title{BioBank2 Java Client User Manual}
-\author{Alberta Ingenuity Centre for Machine Learning}
+\author{\Large{Prepared for the Canadian BioSample Repository}\\
+by the Alberta Ingenuity Centre for Machine Learning}
 \maketitle
 \clearpage
 \tableofcontents
