moved scan link, assign, cabinet scan link and assign menu items to 'Processing'

--- a/docs/javaClientUserGuide/overview.tex
+++ b/docs/javaClientUserGuide/overview.tex
@@ -34,12 +34,39 @@ different some of its components.
     button is for and if applicable the keyboard shortcut. Note that there is
     an icon toolbar under the Main Menu and another grouped with the tree view.
   \item[Tree View] The tree view shown here is for the \emph{Administration
-    View}. The application has multiple views and are described in section
-    \ref{sec:application_views}.
+    View}. The application uses tree views in the \emph{Administration View}
+    and \emph{Processing View} (see section \ref{sec:application_views}). Tree
+    view shows nodes in a hierarchical structure. If a node has children a
+    \emph{plus} symbol is displayed next to the node. When the symbol is
+    pressed the node will expand to show its' child nodes.  Sometimes,
+    operations can be performed on certain nodes in the tree by right clicking
+    with the mouse on the node.
+  \item[Status Messages] The status message are is used to display various
+    status messages by the application. These messages show the current state
+    of the application.
 \end{description}
 
 \section{Main Menu}
 \label{sec:main_menu}
+
+\subsection{Server}
+    \begin{figure}[H]
+      \centering
+      \scalebox{0.4}
+      { \includegraphics*{screenshots/overview/main_menu_server} }
+      \caption{Server menu.}
+      \label{fig:main_menu_server}
+    \end{figure}
+
+\subsection{Administration}
+\subsection{Processing}
+\subsection{Link / Assign}
+\subsection{View}
+\subsection{Print}
+\subsection{Scanner}
+\subsection{Search}
+\subsection{Configuration}
+\subsection{Help}
 
 \section{Views}
 \label{sec:application_views}
