--- a/docs/javaClientUserGuide/overview.tex
+++ b/docs/javaClientUserGuide/overview.tex
@@ -41,26 +41,32 @@ different some of its components.
     pressed the node will expand to show its' child nodes.  Sometimes,
     operations can be performed on certain nodes in the tree by right clicking
     with the mouse on the node.
-  \item[Status Messages] The status message are is used to display various
-    status messages by the application. These messages show the current state
-    of the application.
+  \item[Status Bar] The status bar is used to display the current state of the
+    application. It is usually updated after the user has completed a task.
 \end{description}
 
 \section{Main Menu}
 \label{sec:main_menu}
 
 \subsection{Server}
+The child menu items of the \emph{Server} main menu item allow the user to
+login or logout from a server and to quit the application.
     \begin{figure}[H]
       \centering
-      \scalebox{0.4}
+      \scalebox{0.5}
       { \includegraphics*{screenshots/overview/main_menu_server} }
       \caption{Server menu.}
       \label{fig:main_menu_server}
     \end{figure}
+\begin{description}
+  \item[Login] This menu item allows the user to login to a BioBank2 server. On
+    startup and when logged out this menu item is enabled. When logged into a
+    server this menu item is disabled. Also, the \mbox{\fbox{Ctrl} + \fbox{L}}
+    keyboard short cut can be used to perform this function.
+\end{description}
 
 \subsection{Administration}
 \subsection{Processing}
-\subsection{Link / Assign}
 \subsection{View}
 \subsection{Print}
 \subsection{Scanner}
