rearranged items under the adminsitration menu

--- a/docs/javaClientUserGuide/configuration.tex
+++ b/docs/javaClientUserGuide/configuration.tex
@@ -121,7 +121,7 @@ decoding parameters used when decoding pallet images.
     Scanner} button was pressed. Normally, the application will attempt to
     determine the driver type as soon as the user makes the selection, but
     sometimes the application does not select the correct type. Use the check
-    boxes here to override what the application selected.
+    boxes here to override what the application selected if it was incorrect.
   \item[DPI] The \emph{Dots per Inch} used by the scanner for scanning
     images. For best results use 600 DPI.
   \item[Brightness] The brightness setting to be used when scanning
