--- a/docs/javaClientUserGuide/document.tex
+++ b/docs/javaClientUserGuide/document.tex
@@ -16,6 +16,10 @@
   pdfstartview=FitH]
 	   {hyperref}
 
+% no indentation at beginning of paragraph, and 1 line separating paragraphs
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{1ex}
+
 \oddsidemargin  0.0in
 \evensidemargin 0.0in
 \textwidth      6.75in
