working on overview chapter of java client user manual

--- a/docs/javaClientUserGuide/overview.tex
+++ b/docs/javaClientUserGuide/overview.tex
@@ -89,10 +89,16 @@ passwords is also available.
       \caption{Administration menu.}
       \label{fig:main_menu_administration}
     \end{figure}
-\begin{description}
-  \item[]
-\end{description}
+
 \subsection{Processing Menu}
+    \begin{figure}[H]
+      \centering
+      \scalebox{0.5}
+      { \includegraphics*{screenshots/overview/main_menu_processing} }
+      \caption{Processing menu.}
+      \label{fig:main_menu_processing}
+    \end{figure}
+
 \subsection{View Menu}
 \subsection{Print Menu}
 \subsection{Scanner Menu}
