update logs messages of link and assign

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -42,7 +42,7 @@ linkAssign.activitylog.patient=Found patient with number {0}
 linkAssign.activitylog.visit.selection=Visit selected on site {0}; Drawn: {1}; Processed: {2}; Clinic: {3}
 linkAssign.activitylog.scanRes.total=Scan completed - {0} aliquots found
 linkAssign.activitylog.scanTubeAlone=Tube {0} scanned and set to position {1}
-ScanAssign.activitylog.pallet.checkLabelForProductBarcode=Checking label position {0} for product barcode {1}
+ScanAssign.activitylog.pallet.checkLabelForProductBarcode=Checking label position {0} for product barcode {1} of site {2}
 ScanAssign.activitylog.error=ERROR: {0}
 ScanAssign.activitylog.pallet.positionInitialized=Position {0} initialised with type {1} and free to be used
 ScanAssign.activitylog.pallet.positionUsedWithNoProductBarcode=Position {0} already used with no product barcode and with type {1}. Product barcode {2} will be set.
@@ -70,7 +70,7 @@ Cabinet.activitylog.checkingPosition=Checking position {0}
 Cabinet.activitylog.checkPosition.error=ERROR: Position {0} already in use in container {1}
 Cabinet.activitylog.checkingParent=Checking parent container{0} for type {1}
 Cabinet.activitylog.checkParent.error.type=Bin labelled {0} cannot hold aliquots that contain a sample of type {1}
-Cabinet.activitylog.checkParent.error.found=Can''t find bin labelled {0}
+Cabinet.activitylog.checkParent.error.found=Can''t find bin labelled {0} in site {1}
 Cabinet.activitylog.checkParent.error=ERROR: {0}
 Cabinet.activitylog.gettingInfoId=Getting informations for inventoryID {0}
 Cabinet.activitylog.aliquotInfo=Aliquot {0}: current position={1}
