renamed 'search view' to 'search panel'

--- a/docs/javaClientUserGuide/configuration.tex
+++ b/docs/javaClientUserGuide/configuration.tex
@@ -1,4 +1,5 @@
 \chapter{Configuration}
+\label{chap:configuration}
 The configuration settings for the Java Client can be found by selecting
 \texttt{Configuration -> Preferences} from the main menu.
     \begin{figure}[H]
@@ -97,6 +98,7 @@ patients or container locations.
 \end{description}
 
 \section{Scanning and Decoding}
+\label{sec:scanning_and_decoding}
 The settings on this page allow the user to specify the scanning and
 decoding parameters used when decoding pallet images.
     \begin{figure}[H]
