--- a/docs/javaClientUserGuide/overview.tex
+++ b/docs/javaClientUserGuide/overview.tex
@@ -77,11 +77,13 @@ The items unser the \emph{Server} main menu item are as follows:
 \end{description}
 
 \subsection{Administration Menu}
-The \emph{Administration} main menu item allows the user to perform
+The items under the \emph{Administration} menu allows the user to perform
 administration tasks such as: add repository sites, clinics, studies, container
 types and containers. Global information such as Sample Types, Source Vessels,
 Shipping methods can also be edited. Adding, Editing users and changing user
 passwords is also available.
+
+These functions are discussed in detail in Chapter \ref{chap:administration}.
     \begin{figure}[H]
       \centering
       \scalebox{0.5}
@@ -91,6 +93,9 @@ passwords is also available.
     \end{figure}
 
 \subsection{Processing Menu}
+The \emph{Processing} main menu item provides access to the patient processing
+functions. These functions are the ones that are used most on a day to day
+basis. Please refer to Chapter \ref{chap:processing}.
     \begin{figure}[H]
       \centering
       \scalebox{0.5}
@@ -102,7 +107,32 @@ passwords is also available.
 \subsection{View Menu}
 \subsection{Print Menu}
 \subsection{Scanner Menu}
+These functions are for testing the scanning and decoding parameters in the
+preferences (see section \ref{sec:scanning_and_decoding}).
+    \begin{figure}[H]
+      \centering
+      \scalebox{0.5}
+      { \includegraphics*{screenshots/overview/main_menu_scanner} }
+      \caption{Scanner menu.}
+      \label{fig:main_menu_scanner}
+    \end{figure}
+\begin{description}
+  \item[Scan Plate] Once the scanning regions have been assigned, use this menu
+    item to view the image that will be scanned for the plates that were
+    defined.
+  \item[Decode Plate] Once the decoding parameters have been changed, use this
+    menu item to see how well the decoding performs.
+\end{description}
+
 \subsection{Search Menu}
+    \begin{figure}[H]
+      \centering
+      \scalebox{0.5}
+      { \includegraphics*{screenshots/overview/main_menu_search} }
+      \caption{Search menu.}
+      \label{fig:main_menu_search}
+    \end{figure}
+
 \subsection{Configuration Menu}
 \subsection{Help Menu}
 
