Used FindBugs eclipse plugin to fix some warnings

--- a/docs/cbsr_overview/overview.tex
+++ b/docs/cbsr_overview/overview.tex
@@ -96,10 +96,16 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Inventory Software}
+  \begin{itemize}
+    \item
+  \end{itemize}
+\end{frame}
+
 \begin{frame}{Sample Ordering}
   \begin{itemize}
-    \item Research groups that store samples at CBSR can request a all or
-      subset of their samples at any time.
+    \item Research groups that store samples at CBSR can request some or all of
+      their samples at any time.
     \item Ordering of samples will soon be automated into the inventory
       tracking system.
     \item Once a research group requests samples, the samples must be shipped
