working on java client user manual

--- a/docs/javaClientUserGuide/configuration.tex
+++ b/docs/javaClientUserGuide/configuration.tex
@@ -69,8 +69,6 @@ settings used to send the emails to the team.
 \section{Link \ Assign}
 These settings are used when scanning and decoding pallets and linking them to
 patients or container locations.
-\marginpar{\color{red}{There should  be an appendix with instructions on how to create
-  these barcodes.}}
     \begin{figure}[H]
       \centering
       \scalebox{0.5}
@@ -79,14 +77,15 @@ patients or container locations.
       \label{fig:prefs_link_assign}
     \end{figure}
 \begin{description}
-  \item[Confirm Barcode and Cancel Barcode] To speed up
-    processing of samples, a handheld barcode scanner can be used to quickly
-    enter information into the application. Barcodes with the corresponding
-    words can be printed and then scanned when required by the application (See
-    sections \ref{sec:scan_link}, \ref{sec:scan_assign} and
+  \item[Confirm Barcode and Cancel Barcode] To speed up processing of samples,
+    a handheld barcode scanner can be used to quickly enter information into
+    the application. Barcodes with the corresponding words can be printed and
+    then scanned when required by the application (See sections
+    \ref{sec:scan_link}, \ref{sec:scan_assign} and
     \ref{sec:cabinet_scan_link_assign}). The \textbf{Confirm Barcode} and
     \textbf{Cancel Barcode} settings contain the text encoded into these
-    barcodes when they were created.
+    barcodes when they were created. \todo[size=\small]{Need an appendix with
+      instructions on how to create these barcodes.}%
   \item [Save activity logs into a file and Path for activity logs files] When
     processing patients, the actions taken by the user can be logged and saved
     to files on disc. This section allows the user to activate saving this
