--- a/docs/javaClientUserGuide/notdone.tex
+++ b/docs/javaClientUserGuide/notdone.tex
@@ -14,5 +14,7 @@
 \section{User Administration}
 \subsection{Adding or Editing Users}
 \subsection{Password Change}
+
 \chapter{Reports}
-\chapter{Logging}
+\label{chap:reports}
+\section{Logging}
