--- a/docs/javaClientUserGuide/overview.tex
+++ b/docs/javaClientUserGuide/overview.tex
@@ -105,7 +105,16 @@ basis. Please refer to Chapter \ref{chap:processing}.
     \end{figure}
 
 \subsection{View Menu}
+This menu allows the user to change to a different view. The views allow the
+user to focus on different activities.
+
+See section \ref{sec:application_views} for more information on views.
+
+\missingfigure{View Menu}
+
 \subsection{Print Menu}
+\missingfigure{Print Menu}
+
 \subsection{Scanner Menu}
 These functions are for testing the scanning and decoding parameters in the
 preferences (see section \ref{sec:scanning_and_decoding}).
@@ -193,8 +202,21 @@ The help menu provides access to several functions.
 \section{Views}
 \label{sec:application_views}
 
-\subsection{Adminsitration View}
-
-\subsection{Processing View}
-
-\subsection{Reports View}
+The application has been designed with the following views to aid the user in
+focusing on a particular high level task. The views are as follows:
+\begin{itemize}
+  \item The \textbf{Administration View} is used to configure the repository
+    site. This deals with the studies and clinics associated with the
+    repository sites on the server. Also the view allows the user to configure
+    the containers used by the repository sites. See Chapter
+    \ref{chap:administration} for more details on this view.
+  \item The \textbf{Processing View} deals with accepting patient samples and
+    storing the derived aliquots in a repository site. As well, dispatching
+    samples between sites can be done with this view. See Chapter
+    \ref{chap:processing} for more details on this view.
+  \item The \textbf{Reports View} deals with querying information form the
+    database. Pre-defined reports can be executed in this view as well as
+    allowing the user to create his / her own reports. In addition, the user
+    activity logs can also be queried in this view.  See Chapter
+    \ref{chap:reports} for more details on this view.
+\end{itemize}
